<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2014 Oleksandr Tyshkovets <olexandr.tyshkovets@gmail.com>
 Copyright (c) 2015 Ngewi Fet <ngewif@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart android:id="@+id/pie_chart"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <Spinner android:id="@+id/chart_data_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView android:id="@+id/selected_chart_slice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <ImageButton android:id="@+id/previous_month_chart_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:src="@drawable/navigation_previous_item" />

            <TextView android:id="@+id/chart_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="@style/Dropdown.TextView" />

            <ImageButton android:id="@+id/next_month_chart_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:src="@drawable/navigation_next_item" />

        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_drawer_header"
        app:menu="@menu/nav_drawer_menu"/>
</android.support.v4.widget.DrawerLayout>